[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Result/Defeat.gd" type="Script" id=2]
[ext_resource path="res://assets/Feedbacks/paula_time.png" type="Texture" id=3]
[ext_resource path="res://assets/Feedbacks/background_feedback.png" type="Texture" id=4]
[ext_resource path="res://assets/Feedbacks/star_full.png" type="Texture" id=5]
[ext_resource path="res://assets/Feedbacks/line.png" type="Texture" id=6]
[ext_resource path="res://assets/Feedbacks/progress_bar_empty (1).png" type="Texture" id=7]
[ext_resource path="res://scripts/Result/StarFull.gd" type="Script" id=8]
[ext_resource path="res://assets/buttons/close_button.png" type="Texture" id=11]
[ext_resource path="res://assets/Audio/2_Star.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Audio/3_Star.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/Audio/1_Star.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/Feedbacks/star_empty_feedback.png" type="Texture" id=15]
[ext_resource path="res://assets/Feedbacks/progress_bars/progress_bar_full_red..png" type="Texture" id=16]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float height = 20.0;
uniform float speed = 10.0;
uniform float frequency = 5.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/height = 20.0
shader_param/speed = 10.0
shader_param/frequency = 5.0

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 638.125, 361.25 )
scale = Vector2( 2.22227, 2.48801 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="."]
position = Vector2( 468, 320 )
scale = Vector2( 0.779388, 0.950005 )
texture = ExtResource( 6 )

[node name="PaulaSprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 1088, 465 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 3 )

[node name="FinalScore" type="Label" parent="."]
margin_left = 946.0
margin_top = 132.0
margin_right = 1232.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Results" type="Label" parent="."]
margin_left = 59.0
margin_top = 31.0
margin_right = 399.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 1 )
text = "Resultado:"
align = 1
valign = 1

[node name="FeedbackText" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 51.0
margin_top = 345.0
margin_right = 941.0
margin_bottom = 662.0
custom_fonts/normal_font = SubResource( 2 )
text = "Que pena! Infelizmente você não conseguiu delegar todas as tarefas a tempo. Tente não acumular tarefas para apenas um funcionário, enquanto existem outros disponíveis. Com isso, sua delegação de tarefas pode se tornar mais eficiente e você poderá obter melhores resultados!"

[node name="BackButton" type="Button" parent="."]
margin_left = 1219.0
margin_top = 2.0
margin_right = 1301.0
margin_bottom = 77.0
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 11 )
flat = true

[node name="ScoreBar" type="TextureProgress" parent="."]
margin_left = 54.0
margin_top = 131.0
margin_right = 804.0
margin_bottom = 177.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 16 )

[node name="StarFull1" type="TextureProgress" parent="ScoreBar"]
margin_left = 389.0
margin_top = -10.0
margin_right = 1969.0
margin_bottom = 1518.0
rect_scale = Vector2( 0.04, 0.04 )
max_value = 3.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Audio_1_star" type="AudioStreamPlayer2D" parent="ScoreBar/StarFull1"]
position = Vector2( -11075, -3025 )
scale = Vector2( 25, 25 )
stream = ExtResource( 14 )

[node name="StarFull2" type="TextureProgress" parent="ScoreBar"]
margin_left = 517.0
margin_top = -10.0
margin_right = 2097.0
margin_bottom = 1518.0
rect_scale = Vector2( 0.04, 0.04 )
max_value = 4.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Audio_2_star" type="AudioStreamPlayer2D" parent="ScoreBar/StarFull2"]
stream = ExtResource( 12 )

[node name="StarFull3" type="TextureProgress" parent="ScoreBar"]
margin_left = 606.0
margin_top = -10.0
margin_right = 2186.0
margin_bottom = 1518.0
rect_scale = Vector2( 0.04, 0.04 )
max_value = 4.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Audio_3_star" type="AudioStreamPlayer2D" parent="ScoreBar/StarFull3"]
stream = ExtResource( 13 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
